# ai-experiments

./: README.md
daily-digest-agent/: .gitignore  README.md  config.yaml  main.py  requirements.txt
daily-digest-agent/agent/: filter.py  models.py  summarizer.py
daily-digest-agent/fetchers/: hackernews.py  reddit.py  (+1 more)
flaw-finder/: .gitignore  README.md  pyproject.toml
flaw-finder/examples/: sample_pitch.md
flaw-finder/experiments/: README.md
flaw-finder/inputs/: mumbl_wtf.md
flaw-finder/src/flaw_finder/: __init__.py  agents.py  cli.py  llm.py  models.py  pipeline.py
flaw-finder/tests/: test_pipeline.py
llm-wiki/: .gitignore  AGENTS.md  README.md
local-rag-assistant/: .gitignore  README.md  config.example.yaml  requirements.txt
mac-agent-app/: .gitignore  Package.swift  README.md
mac-agent-runtime/: README.md  pyproject.toml
mac-agent-runtime/examples/: basic_agent.py  local_multi_agent.py
mac-agent-runtime/notes/: design.md  voice-shortcut.md
mac-agent-runtime/scripts/: hammerspoon-double-e.lua  run-voice-task.sh  start-overlay-daemon.sh
mac-agent-runtime/src/mac_agent_runtime/: __init__.py  __main__.py  approval.py  context.py  enforcement.py  harness.py  laptop_tools.py  model.py  multi_agent.py  operator.py  overlay_server.py  overlay_state.py  tools.py  verification.py
mac-agent-runtime/tests/: test_harness.py
multi-agent-research-assistant/: .gitignore  README.md  app.py  main.py  requirements.txt
openeye/: README.md
tiny-memory-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  http_server.py  server.py
(+49 files in other folders)
